[gd_scene load_steps=4 format=3 uid="uid://d2isgw3ajtopr"]

[ext_resource type="Script" path="res://Scenes/Menu/start_menu.gd" id="1_na1r8"]
[ext_resource type="Texture2D" uid="uid://ofmyoeyq4hpc" path="res://assets/Menu/Background.jpg" id="2_mfc1i"]
[ext_resource type="AudioStream" uid="uid://47s3t2np0n64" path="res://assets/Sounds/MenusMusic.wav" id="3_pbdtl"]

[node name="Start Menu" type="Node"]
script = ExtResource("1_na1r8")

[node name="Start Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="Start Menu"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mfc1i")

[node name="Settings" type="Button" parent="Start Menu"]
layout_mode = 0
offset_left = 879.0
offset_top = 605.0
offset_right = 1129.0
offset_bottom = 636.0
text = "Settings"

[node name="Title" type="Label" parent="Start Menu"]
layout_mode = 0
offset_left = 151.0
offset_top = 86.0
offset_right = 1019.0
offset_bottom = 189.0
theme_override_colors/font_color = Color(0.767025, 1.49205e-06, 3.85046e-07, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 75
text = "Mayhem Brawl Quest"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="Start Menu"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 159.0
offset_top = -316.0
offset_right = -165.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0

[node name="SinglePlayer" type="Button" parent="Start Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Single Player Mode"

[node name="Multiplayer" type="Button" parent="Start Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Multiplayer Mode"

[node name="Tutorial" type="Button" parent="Start Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Tutorial"
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Button" parent="Start Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pbdtl")
autoplay = true

[connection signal="pressed" from="Start Menu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Start Menu/VBoxContainer/SinglePlayer" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="Start Menu/VBoxContainer/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="Start Menu/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Start Menu/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
